--- a/src/css/_variables.css
+++ b/src/css/_variables.css
@@ -1,3 +1,14 @@
   :root {
-    --fontSystem: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Helvetica, sans-serif;
-}
+      --fontSystem: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Helvetica, sans-serif;
+  }
+
+
+
+    :root {
+      --fontSystem: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Helvetica, sans-serif;
+      --impureBlack: #121;
+      --navy: #001F3F;
+      --lgrey: lightgrey;
+      --bgcColor: #F0F8FF;
+      --teal: #2f4f4f;
+  }
