--- a/src/css/base/_variables.css
+++ b/src/css/base/_variables.css
@@ -3,4 +3,7 @@
     --black: #121;
     --bgcColor: #b9eee6;
     --txtColor: #430e16;
+    --white: #fff;
+    --twitterColor: #00ACEE;
+    --facebookColor: #3B5998;
 }
