incluyendo paleta de colores

--- a/src/css/base/_variables.css
+++ b/src/css/base/_variables.css
@@ -1,9 +1,145 @@
+:root {
+      --fontSystem: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Helvetica, sans-serif;
+      --black: #121;
+      --bgcColor: #b9eee6;
+      --txtColor: #430e16;
+      --white: #fff;
+      --impureWhite: #c4d1e8;
+      --twitterColor: #00ACEE;
+      --facebookColor: #3B5998;
+      //Paleta generada con http://palx.jxblk.com
+      --base: #430e16;
+      --black: #463c3e;
+      --gray0: #f9f9f9;
+      --gray1: #eeeded;
+      --gray2: #e1e0e0;
+      --gray3: #d4d2d2;
+      --gray4: #c5c2c3;
+      --gray5: #b5b1b2;
+      --gray6: #a39e9f;
+      --gray7: #8d8788;
+      --gray8: #716a6b;
+      --gray9: #463c3e;
+      --red0: #efeaeb;
+      --red1: #ddd3d5;
+      --red2: #c8b9bb;
+      --red3: #af999c;
+      --red4: #8d6d72;
+      --red5: #430e17;
+      --red6: #3b0c14;
+      --red7: #310a11;
+      --red8: #26080d;
+      --red9: #170408;
+      --orange0: #eeebe9;
+      --orange1: #dbd5d1;
+      --orange2: #c6bbb6;
+      --orange3: #ab9c94;
+      --orange4: #887267;
+      --orange5: #43200e;
+      --orange6: #3b1c0c;
+      --orange7: #32170a;
+      --orange8: #271208;
+      --orange9: #170b04;
+      --yellow0: #edece8;
+      --yellow1: #d9d7ce;
+      --yellow2: #c2bfb1;
+      --yellow3: #a6a28d;
+      --yellow4: #827c5f;
+      --yellow5: #433a0e;
+      --yellow6: #3b330c;
+      --yellow7: #332c0a;
+      --yellow8: #282308;
+      --yellow9: #1a1605;
+      --lime0: #ebede7;
+      --lime1: #d5d8ce;
+      --lime2: #bbc1b0;
+      --lime3: #9da68d;
+      --lime4: #75815e;
+      --lime5: #31430e;
+      --lime6: #2b3b0c;
+      --lime7: #25330a;
+      --lime8: #1d2808;
+      --lime9: #131a05;
+      --green0: #e9ede8;
+      --green1: #d1d9cf;
+      --green2: #b5c3b2;
+      --green3: #93a78f;
+      --green4: #668361;
+      --green5: #17430e;
+      --green6: #143b0c;
+      --green7: #11330a;
+      --green8: #0e2808;
+      --green9: #091a05;
+      --teal0: #e8edea;
+      --teal1: #cfd9d2;
+      --teal2: #b2c3b8;
+      --teal3: #8fa797;
+      --teal4: #61846d;
+      --teal5: #0e4320;
+      --teal6: #0c3b1c;
+      --teal7: #0a3318;
+      --teal8: #082813;
+      --teal9: #051a0c;
+      --cyan0: #e8edec;
+      --cyan1: #cfd9d7;
+      --cyan2: #b1c2bf;
+      --cyan3: #8ea7a3;
+      --cyan4: #60837d;
+      --cyan5: #0e433a;
+      --cyan6: #0c3b33;
+      --cyan7: #0a332c;
+      --cyan8: #082823;
+      --cyan9: #051a17;
+      --blue0: #e9ecee;
+      --blue1: #d0d7db;
+      --blue2: #b4bfc5;
+      --blue3: #92a2aa;
+      --blue4: #657b87;
+      --blue5: #0e3143;
+      --blue6: #0c2b3b;
+      --blue7: #0a2432;
+      --blue8: #081c27;
+      --blue9: #051218;
+      --indigo0: #eaebef;
+      --indigo1: #d3d5dd;
+      --indigo2: #b9bcc8;
+      --indigo3: #999daf;
+      --indigo4: #6d738d;
+      --indigo5: #0e1743;
+      --indigo6: #0c143a;
+      --indigo7: #0a1030;
+      --indigo8: #070c23;
+      --indigo9: #040613;
+      --violet0: #eceaef;
+      --violet1: #d7d4dd;
+      --violet2: #bfbac9;
+      --violet3: #a19ab0;
+      --violet4: #796f8e;
+      --violet5: #200e43;
+      --violet6: #1b0c3a;
+      --violet7: #170a30;
+      --violet8: #110723;
+      --violet9: #090414;
+      --fuschia0: #eeeaef;
+      --fuschia1: #dbd3dd;
+      --fuschia2: #c5b8c8;
+      --fuschia3: #ab98af;
+      --fuschia4: #876c8c;
+      --fuschia5: #3a0e43;
+      --fuschia6: #330c3b;
+      --fuschia7: #2b0a31;
+      --fuschia8: #210826;
+      --fuschia9: #140417;
+      --pink0: #efeaed;
+      --pink1: #ddd3d9;
+      --pink2: #c8b8c2;
+      --pink3: #ae98a7;
+      --pink4: #8c6c81;
+      --pink5: #430e31;
+      --pink6: #3b0c2b;
+      --pink7: #320a24;
+      --pink8: #26081c;
+      --pink9: #180511
+  }
+
   :root {
-    --fontSystem: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Helvetica, sans-serif;
-    --black: #121;
-    --bgcColor: #b9eee6;
-    --txtColor: #430e16;
-    --white: #fff;
-    --twitterColor: #00ACEE;
-    --facebookColor: #3B5998;
-}
